mobile: portfolio -> welcome-section text overlow on small-wide screen fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -116,17 +116,13 @@ a {
     var(--main-layout-color-light)
     );  
     box-shadow: 0 0 40px 0 var(--main-layout-color-dark), inset 0 0 20px 0 var(--main-layout-color-dark);
-    font-size: min(36px, 3vw);
+    font-size: min( 3vw, 3vh);
     font-family: 'Roboto Mono';
     user-select: none;
 }
 
-#welcome-section-bg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: url(./assets/welcome-section-bg-jpg.jpg);
-    opacity: 0.5;
+#welcome-section:first-child {
+    margin-top: 20px;
 }
 
 .parallax-div {
@@ -137,6 +133,14 @@ a {
 
 #parallax-name {
     color: var(--text-color-accent);
+}
+
+#welcome-section-bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(./assets/welcome-section-bg-jpg.jpg);
+    opacity: 0.5;
 }
 /* Welcome section $$$ */
 
